# solver_benchmarks

./: .gitignore  LICENSE  README.md  pyproject.toml  run_benchmark_problems.py  run_dimacs_problems.py  run_kennington_problems.py  run_liu_pataki.py  run_maros_meszaros_problems.py  run_miplib_problems.py  run_mittelmann_problems.py  run_netlib_problems.py  run_parametric_problems.py  run_qplib_problems.py  run_random_problems.py  run_sdplib_problems.py  run_suitesparse_problems.py
.github/: dependabot.yml
.github/workflows/: tests.yml
benchmark_problems/: example.py
configs/: maros_meszaros_example.yaml  maros_meszaros_qp_solvers.yaml  multi_dataset_example.yaml  netlib_feasible_example.yaml  qtqp_linear_solver_backend_sweep.yaml  qtqp_refinement_regularization_sweep.yaml  qtqp_vs_clarabel_maros.yaml  scs_anderson_sweep.yaml  scs_linear_solver_backend_sweep.yaml  synthetic_smoke.json
dimacs_problems/: dimacs_problem.py
kennington_problems/: kennington_problem.py
liu_pataki_problems/: liu_pataki_problem.py
maros_meszaros_problems/: maros_meszaros_problem.py
miplib_problems/: miplib_problem.py
mittelmann_problems/: mittelmann_problem.py
netlib_problems/: netlib_problem.py
parametric_problems/: lasso.py  mpc.py  portfolio.py
problem_classes/: control.py  dimacs.py  eq_qp.py  huber.py  kennington.py  lasso.py  liu_pataki.py  maros_meszaros.py  miplib.py  mittelmann.py  netlib.py  portfolio.py  qplib.py  qpsreader.py  random_qp.py  sdplib.py  suitesparse_huber.py  suitesparse_lasso.py  svm.py
problem_classes/cblib_data/: .gitignore
problem_classes/cutest_qp_data/: .gitignore
problem_classes/liu_pataki_data/: infeas_clean_10_10_1.mat  infeas_clean_10_10_10.mat  infeas_clean_10_10_100.mat  infeas_clean_10_10_11.mat  infeas_clean_10_10_12.mat  infeas_clean_10_10_13.mat  infeas_clean_10_10_14.mat  infeas_clean_10_10_15.mat  infeas_clean_10_10_16.mat  infeas_clean_10_10_17.mat  infeas_clean_10_10_18.mat  infeas_clean_10_10_19.mat  infeas_clean_10_10_2.mat  infeas_clean_10_10_20.mat  infeas_clean_10_10_21.mat  infeas_clean_10_10_22.mat  infeas_clean_10_10_23.mat  infeas_clean_10_10_24.mat  infeas_clean_10_10_25.mat  infeas_clean_10_10_26.mat  infeas_clean_10_10_27.mat  infeas_clean_10_10_28.mat  infeas_clean_10_10_29.mat  infeas_clean_10_10_3.mat  infeas_clean_10_10_30.mat  infeas_clean_10_10_31.mat  infeas_clean_10_10_32.mat  infeas_clean_10_10_33.mat  infeas_clean_10_10_34.mat  infeas_clean_10_10_35.mat  infeas_clean_10_10_36.mat  infeas_clean_10_10_37.mat  infeas_clean_10_10_38.mat  infeas_clean_10_10_39.mat  infeas_clean_10_10_4.mat  infeas_clean_10_10_40.mat  infeas_clean_10_10_41.mat  infeas_clean_10_10_42.mat  infeas_clean_10_10_43.mat  infeas_clean_10_10_44.mat  (+760 more)
problem_classes/miplib_data/: .gitignore  README  bisco_probs.txt  quick_test.txt  untar_miplib_files.sh
problem_classes/mittelmann-papilo-preprocessed/: .gitignore
problem_classes/qplib_data/: list_convex_qps.txt
problem_classes/sdplib_data/: README
problem_classes/suitesparse_matrix_collection/: download.jl
qplib_problems/: qplib_problem.py
random_problems/: random_problem.py
results/benchmark_problems/: failure_rates.csv  geom_mean_iter_normalized.csv  geom_mean_iter_raw.csv  geom_mean_run_time_normalized.csv  geom_mean_run_time_raw.csv  performance_profiles.csv
results/kennington_problems/: failure_rates.csv  geom_mean_iter_normalized.csv  geom_mean_iter_raw.csv  geom_mean_run_time_normalized.csv  geom_mean_run_time_raw.csv  kennington_problems_failure_table.tex  kennington_problems_geom_mean_table.tex  kennington_problems_iters.tex  kennington_problems_table.tex  performance_profiles.csv
results/liu_pataki_problems/: failure_rates.csv  geom_mean_iter_normalized.csv  geom_mean_iter_raw.csv  geom_mean_run_time_normalized.csv  geom_mean_run_time_raw.csv  liu_pataki_problems_failure_table.tex  liu_pataki_problems_geom_mean_table.tex  liu_pataki_problems_iters.tex  liu_pataki_problems_table.tex  performance_profiles.csv
results/maros_meszaros_problems/: failure_rates.csv  geom_mean_iter_normalized.csv  geom_mean_iter_raw.csv  geom_mean_run_time_normalized.csv  geom_mean_run_time_raw.csv  maros_meszaros_problems_failure_table.tex  maros_meszaros_problems_geom_mean_table.tex  maros_meszaros_problems_iters.tex  maros_meszaros_problems_table.tex  performance_profiles.csv  results_table.tex
results/maros_meszaros_problems_AA_10_1/: failure_rates.csv  geom_mean_iter_normalized.csv  geom_mean_iter_raw.csv  geom_mean_run_time_normalized.csv  geom_mean_run_time_raw.csv  maros_meszaros_problems_AA_failure_table.tex  maros_meszaros_problems_AA_geom_mean_table.tex  maros_meszaros_problems_AA_iters.tex  (+3 more)
scripts/: ci_solver_smoke.py  prepare_cblib.py  prepare_cutest_qp.py  prepare_dc_opf.py  prepare_dimacs.py  prepare_kennington.py  prepare_libsvm_qp.py  prepare_miplib.py  prepare_mittelmann.py  prepare_mittelmann_sdp.py  prepare_mpc_qpbenchmark.py  prepare_qplib.py  prepare_sdplib.py  prepare_tsplib_sdp.py
sdplib_problems/: sdplib_problem.py
solver_benchmarks/: __init__.py  cli.py  worker.py
solvers/: clarabel.py  cosmo.py  ecos.py  osqp.py  qpalm.py  qtqp.py  scs.py  solvers.py  statuses.py
suitesparse_problems/: suitesparse_problem.py
tests/: conftest.py  test_adapter_kkt.py  test_adapter_option_forwarding.py  test_adapter_status_mapping.py  test_analysis.py  test_atomic_storage.py  test_cblib_expcone.py  test_config.py  test_cvxopt_adapter.py  test_data_prepare.py  test_dataset_downloads.py  test_datasets.py  test_dc_opf.py  test_e2e_run_to_report.py  test_ecos_adapter.py  test_kkt.py  test_libsvm_qp.py  test_logging.py  test_misc_coverage.py  test_mittelmann_sdp.py  test_psd_transforms.py  test_qp_split.py  test_qpsreader.py  test_runner.py  test_runner_parallelism.py  test_scs_qtqp_comprehensive.py  test_sdplib_transform.py  test_solver_base_helpers.py  test_solver_integrations.py  test_subprocess_timeout.py  test_system_info.py  test_transforms.py  test_tsplib_sdp.py
utils/: benchmark.py  general.py  make_table.py  parametric.py
(+1253 files in other folders)
