[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "solver-benchmarks"
version = "0.0.1"
description = "Config-driven benchmark suite for convex optimization solvers."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "click>=8.1",
    "h5py>=3.0",
    "highspy>=1.0",
    # Matplotlib 3.9 is the floor: analysis/plots.py uses the
    # `tick_labels=` keyword on ax.boxplot, which was added in 3.9
    # (replacing the deprecated `labels=` keyword).
    "matplotlib>=3.9",
    "numpy>=1.24",
    "pandas>=2.0",
    "pyarrow>=14.0",
    "PyYAML>=6.0",
    "scipy>=1.10",
]

[project.optional-dependencies]
highs = ["highspy>=1.0"]
scs = ["scs>=3.0"]
osqp = ["osqp>=0.6"]
clarabel = ["clarabel>=0.7"]
qtqp = [
    "qtqp>=0.0.3; python_version < '3.11'",
    "qtqp>=0.0.5; python_version >= '3.11'",
]
gurobi = ["gurobipy>=11.0"]
mosek = ["Mosek>=10.0"]
pdlp = ["ortools>=9.3.0"]
proxqp = ["proxsuite>=0.7.0,!=0.7.2.post1; python_version < '3.14'"]
piqp = ["piqp>=0.6.0"]
sdpa = ["sdpa-python>=0.2.2; python_version < '3.14'"]
cplex = ["cplex>=22.1"]
test = ["pytest>=7.0", "pytest-timeout>=2.1"]
# Optional: psutil enriches the system_info captured into manifests
# (physical core count, CPU frequency, total RAM, swap). The capture
# falls back gracefully when psutil isn't installed, so this is a
# soft dep.
system_info = ["psutil>=5.9"]
all = [
    "scs>=3.0",
    "osqp>=0.6",
    "clarabel>=0.7",
    "qtqp>=0.0.3; python_version < '3.11'",
    "qtqp>=0.0.5; python_version >= '3.11'",
    "ortools>=9.3.0",
    "piqp>=0.6.0",
    "proxsuite>=0.7.0,!=0.7.2.post1; python_version < '3.14'",
    "sdpa-python>=0.2.2; python_version < '3.14'",
    "pytest>=7.0",
    "pytest-timeout>=2.1",
]

[project.scripts]
bench = "solver_benchmarks.cli:main"

[tool.setuptools.packages.find]
include = ["solver_benchmarks*", "problem_classes*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q --strict-markers"
pythonpath = ["."]
timeout = 300
markers = [
    "network: tests that contact external dataset hosts",
    "slow: tests that take more than a few seconds",
]

[tool.ruff]
line-length = 100
target-version = "py310"
extend-exclude = ["build", "results", "configs/runs", "problem_classes/*_data"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP"]
ignore = [
    "E501",  # line length (covered by formatter; some long strings intentional)
    "E741",  # ambiguous variable name (math conventions use l, m, n)
    "B008",  # function call in argument default (Click options)
    "B904",  # raise from inside except
    "B905",  # zip without strict= (rolling fix planned)
    "C901",  # function is too complex (planned for PR 7)
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["B011"]

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
# strict_optional is off because the codebase uses None-returning paths
# extensively (e.g. SolverResult fields that are populated only on
# success). Tightening this is a follow-up.
strict_optional = false
# tests/scripts intentionally skip annotations.
exclude = [
    "tests/.*",
    "scripts/.*",
    "build/.*",
    "results/.*",
]
